correct z-index for some sections because cursor:pointer was not work

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,6 +20,7 @@ body>.container-fluid{
     border: none;
     padding-top: 44px;
    position: relative;
+  
 }
 #custom-right>li>a{
     margin-left: 47px;
@@ -31,7 +32,7 @@ body>.container-fluid{
     background-color: $bg-button;
     border: 1px solid  $bg-button;
     border-radius: 50px;
-    cursor: pointer;
+    //cursor: pointer;
     transition-property: color,background-color;
     transition-duration: 0.3s;
 }
@@ -63,7 +64,7 @@ body>.container-fluid{
     background-size: cover;
     height: 1000px;
     min-width: 100%;
-    z-index: -3;
+    //z-index: -3;
     position: relative;
     
 }
@@ -71,7 +72,7 @@ body>.container-fluid{
 .header .overlay {
     background: rgba(244,244,245,0.40);
     height: 1000px;
-    z-index: -2;
+    //z-index: -2;
 }
 
 .brand{
@@ -126,9 +127,9 @@ h1{
     margin-right: 15px;
     margin-left: 50px;
 }
-.images>img{
+/*.images>img{
     z-index: -1;
-}
+}*/
 
 .feature1{
     
@@ -137,6 +138,8 @@ h1{
     padding-right: 225px;
     padding-top: 122px;
     padding-bottom: 1px;
+    position: absolute;
+    z-index: 1;
     
 }
 hr.hr{
@@ -408,7 +411,7 @@ i.fa.fa-apple.fa-2x {
 #carousel-customers .carousel-indicators li {
     width: 112px;
     height: 112px;
-    cursor: pointer;
+    //cursor: pointer;
     border: none;
     border-radius: 50px;
     opacity: 0.4;
@@ -456,7 +459,7 @@ i.fa.fa-apple.fa-2x {
     background-color: $bg-color;
     padding-top: 160px;
     position: relative;
-    z-index: 0;
+    //z-index: 0;
 }
 .switch1
  {  max-width: 215px;
@@ -621,7 +624,7 @@ i.fa.fa-check{
     position: relative;
     left: -35%;
     margin-top: 23%;
-    z-index: -1;
+    //z-index: -1;
 }
 .Pro .listed{
     margin-bottom: 50px;
@@ -629,7 +632,12 @@ i.fa.fa-check{
 .Pro h1{
     padding-top: 42px;
 }
+.Pro .btn-app{
+    background-color: transparent;
+    color: $bg-button;
+}
 .starter{
+    position: absolute;
     z-index: 1;
     box-shadow: -10px 10px 23px 0px rgba(61, 61, 62, 0.15);
 }
